--- a/products/templates/products/product_admin.html
+++ b/products/templates/products/product_admin.html
@@ -20,8 +20,12 @@
                 </div>
                 <div class="col-xl-6">
                     {% if dataset == "categories" %}
-                        <!-- Credit: https://stackoverflow.com/questions/2236691/how-do-i-display-the-value-of-a-django-form-field-in-a-template -->
-                        <img class="img-fluid image-80" src="/media/{{ form.image.value }}" alt="{{ form.name.value }} image" />
+                        {% if form.image.value %}
+                            <!-- Credit: https://stackoverflow.com/questions/2236691/how-do-i-display-the-value-of-a-django-form-field-in-a-template -->
+                            <img class="img-fluid image-80" src="/media/{{ form.image.value }}" alt="{{ form.name.value }} image" />
+                        {% else %}
+                            <img class="img-fluid image-80" src="/media/assets/img/noimage.png" alt="no image stored" />
+                        {% endif %}
                     {% else %}
                         <img class="img-fluid image-80" src="/media/assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" />
                     {% endif %}
@@ -116,19 +120,12 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
-                                    <form class="mt-3" action="{% url 'update_product' form.id_no.value %}" method="POST" enctype="multipart/form-data" id="product-update-form">
-                                        {% csrf_token %}
-                                        {{ form|crispy }}
-                                        <button class="border-solid masthead-button btn btn-primary js-scroll-trigger float-right">Update</button>
-                                    </form>
-                                </div>
-                                <!-- <div class="row">
-                                    <div class="col-4">
-                                        <button type="submit" class="edit-button border-solid masthead-button btn btn-primary js-scroll-trigger flex-margin-b">
-                                            <i class="far fa-edit"></i> update
-                                        </button>
+                                        <form class="mt-3" action="{% url 'update_product' form.id_no.value %}" method="POST" enctype="multipart/form-data" id="product-update-form">
+                                            {% csrf_token %}
+                                            {{ form|crispy }}
+                                            <button class="border-solid masthead-button btn btn-primary js-scroll-trigger float-right">Update</button>
+                                        </form>
                                     </div>
-                                </div> -->
                                 </div>
                             </div>
                         </div>
