--- a/products/templates/products/product_admin.html
+++ b/products/templates/products/product_admin.html
@@ -104,16 +104,24 @@
                                             <div class="d-inline">
                                                 {% if return_query_length != 0 %}
                                                     <input class="product-search-input text-blue text-xs text-center" type="text" name="product_query_length" id="product_query_length" 
-                                                    value=" record 1 of: {{ return_query_length }}">
+                                                    value=" record {{ return_query_number }} of: {{ return_query_length }}">
                                                 {% else %}
                                                     <input class="product-search-input text-blue text-xs text-center" type="text" name="no_product_query_length" id="no_product_query_length" 
                                                     value=" no records found">
                                                 {% endif %}
                                             </div>
                                             <div class="d-inline">
-                                                <button class="search-button text-center ml-n4" type="submit">
-                                                        <i class="fas fa-forward"></i>
-                                                </button>
+                                                {% if return_query_length != 0 %}
+                                                    {% if return_query_number == return_query_length %}
+                                                        <button class="search-button text-center ml-n4" type="submit">
+                                                                <i class="fas fa-step-forward"></i>
+                                                        </button>
+                                                    {% else %}
+                                                        <a class="search-button text-center ml-n4 pt-1" 
+                                                        href="{% url 'next_product' %}?this_product={{ dataset }},{{ return_query_number }}">
+                                                        <i class="fas fa-forward"></i></a>
+                                                    {% endif %}
+                                                {% endif %}
                                             </div>
                                         </div>
                                     </div>
