--- a/products/templates/products/product_admin.html
+++ b/products/templates/products/product_admin.html
@@ -104,7 +104,7 @@
                                                         </button>
                                                     {% else %}
                                                         <a class="search-button text-center ml-n4 pt-1" 
-                                                        href="{% url 'prev_product' %}?this_product={{ dataset }},{{ return_query_number }}">
+                                                        href="{% url 'prev_product' %}?this_product={{ dataset }},{{ return_query_number }},{{ return_query_length }},{{ query }}">
                                                         <i class="fas fa-backward"></i></a>
                                                     {% endif %}
                                                 {% endif %}
@@ -126,7 +126,7 @@
                                                         </button>
                                                     {% else %}
                                                         <a class="search-button text-center ml-n4 pt-1" 
-                                                        href="{% url 'next_product' %}?this_product={{ dataset }},{{ return_query_number }}">
+                                                        href="{% url 'next_product' %}?this_product={{ dataset }},{{ return_query_number }},{{ return_query_length }},{{ query }}">
                                                         <i class="fas fa-forward"></i></a>
                                                     {% endif %}
                                                 {% endif %}
