--- a/templates/base.html
+++ b/templates/base.html
@@ -104,8 +104,7 @@
                     </ul>
                 </div>
                 <div class="ml-2 mr-auto">
-                    <form action="{% url 'product_admin' %}?dataset=product" method="post">
-                    {% csrf_token %}
+                    <form action="{% url 'search_products' %}" method="GET">
                         <input class="search-input text-blue text-xs" type="text" name="product_search" id="product_search" placeholder=" search ...">
                         <button class="search-button text-center" type="submit">
                                 <i class="fas fa-search"></i>
