--- a/templates/base.html
+++ b/templates/base.html
@@ -158,7 +158,7 @@
                             {% endif %}
                             </div>
                         </li>
-                        <li class="nav-item my-auto"><a class="nav-link js-scroll-trigger" href="#service">customer service</a></li>
+                        <li class="nav-item my-auto"><a class="nav-link js-scroll-trigger" href="{% url 'service' %}">customer service</a></li>
                         <li class="nav-item d-lg-none"><a class="nav-link js-scroll-trigger" href="{% url 'basket' %}">basket</a></li>
                         <li class="nav-item d-lg-none"><a class="nav-link js-scroll-trigger" href="#bot">BUILD-A-BUFFET</a></li>
                     </ul>
