--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10501,6 +10501,9 @@ body {
 .width-50 {
     width: 50% !important;
 }
+.width-100 {
+    width: 100% !important;
+}
 
 .text-blue {
     color: #426765;
