--- a/service/templates/service/service.html
+++ b/service/templates/service/service.html
@@ -20,13 +20,13 @@
             <form class="mt-3 text-center " action="{% url 'service' %}" method="POST" id="user-question-form">
                 {% csrf_token %}
                     {% if request.user.is_authenticated %}
-                        <div><input class="mb-2 text-blue text-xs" type="text" value="{{ request.user }}" name="current_user"></div>
-                        <div><input class="mb-2 text-blue text-xs" type="text" value="{{ request.user.email }}" name="current_user_email"></div>
-                        <div><textarea class="width-100 mb-2 text-blue text-xs" rows="2" value="" name="customer_question" placeholder = "type your question here..."></textarea></div>
+                        <div><input class="mb-2 text-blue text-xs" type="text" value="{{ request.user }}" name="name"></div>
+                        <div><input class="mb-2 text-blue text-xs" type="text" value="{{ request.user.email }}" name="email"></div>
+                        <div><textarea class="width-100 mb-2 text-blue text-xs" rows="2" value="" name="question" placeholder = "type your question here..."></textarea></div>
                     {% else %}
-                        <div><input class="mb-2 text-blue text-xs" type="text" value="" name="guest_user" placeholder = "name"></div>
-                        <div><input class="mb-2 text-blue text-xs" type="text" value="" name="guest_user_email" placeholder = "email"></div>
-                        <div><textarea class="width-100 mb-2 text-blue text-xs" rows="2" value="" name="customer_question" placeholder = "type your question here..."></textarea></div>
+                        <div><input class="mb-2 text-blue text-xs" type="text" value="" name="name" placeholder = "name"></div>
+                        <div><input class="mb-2 text-blue text-xs" type="text" value="" name="email" placeholder = "email"></div>
+                        <div><textarea class="width-100 mb-2 text-blue text-xs" rows="2" value="" name="question" placeholder = "type your question here..."></textarea></div>
                     {% endif %}
                 <button class="width-50 px-auto border-solid masthead-button btn btn-primary js-scroll-trigger">Submit</button>
             </form>
