--- a/templates/includes/contact.html
+++ b/templates/includes/contact.html
@@ -8,7 +8,7 @@
                             <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Address</h4>
                             <hr class="my-4" />
-                            <div class="small text-black-50">22 Acacia Avenue</div>
+                            <div class="small text-black-50">Unit 22, St Anne's Industrial Estate, Manchester, MU60 6GL</div>
                         </div>
                     </div>
                 </div>
@@ -18,7 +18,7 @@
                             <i class="fas fa-envelope text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Email</h4>
                             <hr class="my-4" />
-                            <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
+                            <div class="small text-black-50"><a href="#!">contact@build-a-buffet.com</a></div>
                         </div>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
                             <i class="fas fa-mobile-alt text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Phone</h4>
                             <hr class="my-4" />
-                            <div class="small text-black-50">+1 (555) 555-5555</div>
+                            <div class="small text-black-50">+44 1448 868000</div>
                         </div>
                     </div>
                 </div>
