Fix: standardise contact.html includes

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -182,5 +182,5 @@
             </div>
         </div>
     </section>
-{% include 'products/includes/contact.html' %}
+{% include 'includes/contact.html' %}
 {% endblock %}
