--- a/products/templates/products/product_admin.html
+++ b/products/templates/products/product_admin.html
@@ -153,5 +153,5 @@
     </section>
 
 {{ block.super }}
-{% include 'products/includes/contact.html' %}
+{% include 'includes/contact.html' %}
 {% endblock %}
