--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -169,5 +169,5 @@
     </script>
 
 {{ block.super }}
-{% include 'products/includes/contact.html' %}
+{% include 'includes/contact.html' %}
 {% endblock %}
