--- a/products/templates/products/search_products.html
+++ b/products/templates/products/search_products.html
@@ -42,5 +42,5 @@
             </div>
         </div>
     </section>
-{% include 'products/includes/contact.html' %}
+{% include 'includes/contact.html' %}
 {% endblock %}
