--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -106,5 +106,5 @@
                 </div>
             </div>
     </section>
-{% include 'products/includes/contact.html' %}
+{% include 'includes/contact.html' %}
 {% endblock %}
