--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -168,5 +168,5 @@
         }
     </script>
 {{ block.super }}
-{% include 'products/includes/contact.html' %}
+{% include 'includes/contact.html' %}
 {% endblock %}
