Build: update user profile if save-info checked

--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -28,4 +28,5 @@
     <p class="product-text-three mt-4 text-center mb-5 text-blue">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
 </section>
 
+{% include 'includes/contact.html' %}
 {% endblock %}
