--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -53,13 +53,13 @@
                                         {% if selected == "selected-one" %}
                                             {% for option in options %}
                                                 <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
-                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-one">
+                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-one,{{total_price}}">
                                                     {{ option.option1 }}</a>
                                             {% endfor %}
                                         {% else %}
                                             {% for option in options %}
                                                 <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
-                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-one">
+                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-one,{{total_price}}">
                                                     {{ option.option1 }}</a>
                                             {% endfor %}
                                         {% endif %}
@@ -68,13 +68,13 @@
                                         {% if selected == "selected-two" %}
                                             {% for option in options %}
                                                 <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
-                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-two">
+                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-two,{{total_price}}">
                                                     {{ option.option2 }}</a>
                                             {% endfor %}
                                         {% else %}
                                             {% for option in options %}
                                                 <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
-                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-two">
+                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-two,{{total_price}}">
                                                     {{ option.option2 }}</a>
                                             {% endfor %}
                                         {% endif %}
@@ -83,13 +83,13 @@
                                         {% if selected == "selected-three" %}
                                             {% for option in options %}
                                                 <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
-                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-three">
+                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-three,{{total_price}}">
                                                     {{ option.option3 }}</a>
                                             {% endfor %}
                                         {% else %}
                                             {% for option in options %}
                                                 <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
-                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-three">
+                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-three,{{total_price}}">
                                                     {{ option.option3 }}</a>
                                             {% endfor %}
                                         {% endif %}
