Fix: css and js files to full file path for https

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,9 @@
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{% static 'css/styles.css' %}" rel="stylesheet" /> <!-- Credit: https://startbootstrap.com/previews/grayscale -->
+        <link href="/static/css/styles.css" rel="stylesheet" /> <!-- Credit: https://startbootstrap.com/previews/grayscale -->
         <!-- slider CSS -->
-        <link href="{% static 'css/slider.css' %}" rel="stylesheet" /> <!-- Credit: https://www.w3schools.com/howto/howto_js_rangeslider.asp -->
+        <link href="/static/css/slider.css" rel="stylesheet" /> <!-- Credit: https://www.w3schools.com/howto/howto_js_rangeslider.asp -->
     {% endblock %}
 
     {% block extra_css %}
@@ -35,7 +35,7 @@
         <!-- Third party plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- Core theme JS-->
-        <script src="{% static 'js/scripts.js' %}"></script> <!-- Credit: https://startbootstrap.com/previews/grayscale -->
+        <script src="/static/js/scripts.js"></script> <!-- Credit: https://startbootstrap.com/previews/grayscale -->
         <!-- Stripe -->
         <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
