--- a/products/templates/products/search_products.html
+++ b/products/templates/products/search_products.html
@@ -23,7 +23,7 @@
                     {% endif %}
                 </div>
                 <div class="col-xl-6">
-                    <img class="img-fluid image-80" src="/media/assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" />
+                    <img class="img-fluid image-80" src="{{ MEDIA_URL }}/assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" />
                 </div>
                 <div class="col-xl-6">
                     <div class="text-center h-100 project">
