Error: replaced / onto MEDIA_URL and removed / from categories.json

--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -19,7 +19,7 @@
                     <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Basket</h1>
                 </div>
                 <div class="col-xl-6">
-                    <img class="img-fluid image-70" src="/media/assets/img/pexels-armand-m-3043328.jpg" alt="shopping basket" /></div>
+                    <img class="img-fluid image-70" src="{{ MEDIA_URL }}assets/img/pexels-armand-m-3043328.jpg" alt="shopping basket" /></div>
                 <div class="col-xl-6">
                     <div class="text-center h-100 project">
                         <div class="d-flex h-100">
