--- a/products/templates/products/product_admin.html
+++ b/products/templates/products/product_admin.html
@@ -24,10 +24,10 @@
                             <!-- Credit: https://stackoverflow.com/questions/2236691/how-do-i-display-the-value-of-a-django-form-field-in-a-template -->
                             <img class="img-fluid image-80" src="{{ MEDIA_URL }}{{ image.image }}{{ form.image.value }}" alt="{{ form.name.value }} image" />
                         {% else %}
-                            <img class="img-fluid image-80" src="{{ MEDIA_URL }}/assets/img/noimage.png" alt="no image stored" />
+                            <img class="img-fluid image-80" src="{{ MEDIA_URL }}assets/img/noimage.png" alt="no image stored" />
                         {% endif %}
                     {% else %}
-                        <img class="img-fluid image-80" src="{{ MEDIA_URL }}/assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" />
+                        <img class="img-fluid image-80" src="{{ MEDIA_URL }}assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" />
                     {% endif %}
                 </div>
                 <div class="col-xl-6">
@@ -138,7 +138,13 @@
                                     <div class="col-12">
                                         <form class="mt-3" action="{% url 'update_product' form.id_no.value %}" method="POST" enctype="multipart/form-data" id="product-update-form">
                                             {% csrf_token %}
-                                            {{ form|crispy }}
+                                            {% for field in form %}
+                                                {% if field.name != 'image' %}
+                                                    {{ field | as_crispy_field }}
+                                                {% else %}
+                                                    {{ field }}
+                                                {% endif %}
+                                            {% endfor %}
                                             <button class="border-solid masthead-button btn btn-primary js-scroll-trigger float-right">Update</button>
                                         </form>
                                     </div>
@@ -154,4 +160,14 @@
 
 {{ block.super }}
 {% include 'includes/contact.html' %}
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('#new-image').change(function() {
+            var file = $('#new-image')[0].files[0];
+            $('#filename').text(`Image will be set to: ${file.name}`);
+        });
+    </script>
 {% endblock %}
