Error: added {{ MEDIA_URL }} to index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,7 +26,7 @@
         <div class="container">
             <!-- Produce One Row-->
             <div class="row justify-content-center no-gutters">
-                <div class="col-lg-6"><img class="img-fluid image-80" src="/media/assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" /></div>
+                <div class="col-lg-6"><img class="img-fluid image-80" src="{{ MEDIA_URL }}assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" /></div>
                 <div class="col-lg-6">
                     <div class="text-center h-100 project">
                         <div class="d-flex h-100">
@@ -41,7 +41,7 @@
             </div>
             <!-- Produce Two Row-->
             <div class="row justify-content-center no-gutters">
-                <div class="col-lg-6"><img class="img-fluid image-80" src="/media/assets/img/pexels-kaboompics-com-5944.jpg" alt="chips-n-dips" /></div>
+                <div class="col-lg-6"><img class="img-fluid image-80" src="{{ MEDIA_URL }}assets/img/pexels-kaboompics-com-5944.jpg" alt="chips-n-dips" /></div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="text-center h-100 project">
                         <div class="d-flex h-100">
