--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -5,8 +5,13 @@
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Verify Your E-mail Address" %}</h1>
 
-    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+<section class="products-section">
+    <h1 class="product-text-two mx-auto text-uppercase text-center flex-margin-b text-blue">
+        {% trans "Verify Your E-mail Address" %}</h1>
+    <p class="product-text-three mx-2 text-center mb-5 text-blue">
+        {% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}
+    </p>
+</section>
 
 {% endblock %}
