Fix adjusted sizing of submit buttons on checkout.html

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10471,7 +10471,6 @@ body {
 }
 
 .submit-button .btn {
-    max-width: 70vw;
     margin-bottom: 0.5rem;
 }
 
@@ -10528,6 +10527,7 @@ body {
 
 .bg-blue {
   background-color: #426765;
+  width: 100%;
 }
 .bg-blue:hover {
   opacity: 0.7;
