Build: added bartholemew-pay image

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -190,11 +190,7 @@
         </div>
     </section>
     <div id="loading-overlay">
-        <h1 class="text-light logo-font loading-spinner">
-            <span class="icon">
-                <i class="fas fa-3x fa-sync-alt fa-spin"></i>
-            </span>
-        </h1>
+        <img src="{{ MEDIA_URL }}assets/img/bartholemew-pay.jpg" alt="bartholemew">
     </div>
 {% include 'includes/contact.html' %}
 {% endblock %}
