Build: styled loading-overlay

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -190,7 +190,9 @@
         </div>
     </section>
     <div id="loading-overlay">
-        <img src="{{ MEDIA_URL }}assets/img/bartholemew-pay.jpg" alt="bartholemew">
+        <div class="loading-image-div">
+            <img class="loading-img" src="{{ MEDIA_URL }}assets/img/bartholemew-pay.jpg" alt="bartholemew">
+        </div>
     </div>
 {% include 'includes/contact.html' %}
 {% endblock %}
