--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -48,20 +48,30 @@ select option[value=""] {
 }
 
 #loading-overlay {
-	display: none;
+	/* display: none; */
 	position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(23, 162, 184, .85);
+    background: rgba(255, 255, 255, 0.85);
     z-index: 9999;
 }
 
-.loading-spinner {
+.loading-image-div {
 	display: flex;
     align-items: center;
     justify-content: center;
     margin: 0;
     height: 100%;
 }
+
+@media screen and (orientation: landscape){ /* Credit: https://stackoverflow.com/questions/43589507/how-can-you-have-bootstrap-responsiveness-based-on-screen-ratio-instead-of-scree */
+    .loading-img {
+        height: 90vh;
+    }
+
+@media screen and (orientation: portrait){ /* Credit: https://stackoverflow.com/questions/43589507/how-can-you-have-bootstrap-responsiveness-based-on-screen-ratio-instead-of-scree */
+    .loading-img {
+        width: 90vw;
+    }
