Build: styling add and delete buttons on product_admin.html

--- a/products/templates/products/product_admin.html
+++ b/products/templates/products/product_admin.html
@@ -145,11 +145,11 @@
                                                     {{ field }}
                                                 {% endif %}
                                             {% endfor %}
-                                            <button class="border-solid px-3 masthead-button btn btn-primary js-scroll-trigger float-right">Update</button>
-                                            <a class="edit-button border-solid px-3 masthead-button btn btn-primary js-scroll-trigger " 
+                                            <button class="bg-grey border-solid px-3 masthead-button btn btn-primary js-scroll-trigger float-right">Update</button>
+                                            <a class="bg-green border-solid px-3 masthead-button btn btn-primary js-scroll-trigger " 
                                                 href="{% url 'update_product' form.id_no.value %}">
                                                 Add</a>
-                                            <a class="delete-button border-solid px-3 masthead-button btn btn-primary js-scroll-trigger " 
+                                            <a class="bg-red border-solid px-3 masthead-button btn btn-primary js-scroll-trigger " 
                                                 href="{% url 'update_product' form.id_no.value %}">
                                                 Delete</a>
                                         </form>
